# cpp-trader-backtester

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  README.md
data/: sample_ticks.csv
include/: memory_pool.hpp  order_book.hpp  tick_engine.hpp  types.hpp
src/: benchmark.cpp  main.cpp  memory_pool.cpp  order_book.cpp  test_order_book.cpp  test_strategies.cpp  test_types_performance.cpp  tick_engine.cpp
strategies/: momentum_strategy.hpp
